beginning of clipping

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
     -->
     <title>OpenMic</title>
     <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/stylesheet.css">    
+    <link rel="stylesheet" href="./styles/stylesheet.css">
     <script src="https://js.stripe.com/v3/"></script>
+    <base href="/" />
   </head>
   <body>
     <noscript>
