--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/stylesheet.css">
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://unpkg.com/wavesurfer.js"></script>
     <base href="/" />
   </head>
   <body>
